fix flicker on mobile

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -34,9 +34,13 @@ html, body{
   position:absolute;
   overflow-x: hidden;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+
   height: 100vh;
   width: 100vw;
+
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-overflow-scrolling: touch;
 }
 @-ms-viewport {
   width: device-width;
